# what-to-play

./: .gitignore  README.md  package-lock.json
ambiente/: pyvenv.cfg
ambiente/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
backend/: README.md  app.py  config.py  pyproject.toml  run.py
backend/app/: __init__.py  conexao_banco.py
backend/app/dao/: avalia_dao.py  classificação_etaria_dao.py  favorita_dao.py  jogos_dao.py  usuario_dao.py
backend/app/templates/: user.html
backend/func/: banco.py  funcoes.py
backend/routes/: app.py
backend/routes/ambiente/: pyvenv.cfg
backend/routes/ambiente/Scripts/: activate  activate.bat
backend/templates/: index.html  login.html
backend/whattoplay/application/: back.md
backend/whattoplay/application/func/: banco.py  funcoes.py
frontend/: angular.json  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  main.ts  styles.css
frontend/src/app/: app.module.ts  app.routes.ts
frontend/src/app/core/: core-module.ts  core-routing.module.ts  core-routing.modules.ts  core.module.ts
frontend/src/app/interceptors/: auth.interceptor.ts
frontend/src/app/shared/: shared.module.ts
whattoplay/: README.md  app.py  pyproject.toml
whattoplay/frontend/: package-lock.json  tsconfig.app.json
whattoplay/frontend/src/: index.html
whattoplay/frontend/src/app/: app.module.ts
whattoplay/whattoplay/: README.md
whattoplay/whattoplay/backend/: back.md
whattoplay/whattoplay/backend/func/: banco.py  conexao_bd.py  (+1 more)
whattoplay/whattoplay/frontend/: package-lock.json  package.json
(+86 files in other folders)
