[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Rodrigo Bettio <rodriguinhobettiojr1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
mysql-connector-python = "^9.1.0"
flask-cors = "^5.0.0"
pytz = "^2024.2"
bcrypt = "^4.2.1"
flask-jwt-extended = "^4.7.1"
flask-mail = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
